unpackaged/main/default/objects/Blood_Test__c/fields/SHBG_Min__c.field-meta.xml
<CustomField>
    <fullName>SHBG_Min__c</fullName>
    <defaultValue>TEXT(18.0)</defaultValue>
    <label>SHBG Min</label>
    <length>255</length>
    <type>Text</type>
</CustomField>