unpackaged/main/default/objects/Blood_Test__c/fields/Sodium__c.field-meta.xml
<CustomField>
    <fullName>Sodium__c</fullName>
    <label>Sodium</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>