unpackaged/main/default/objects/Blood_Test__c/fields/Sodium_Max__c.field-meta.xml
<CustomField>
    <fullName>Sodium_Max__c</fullName>
    <defaultValue>TEXT(145)</defaultValue>
    <label>Sodium Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>