unpackaged/main/default/objects/Blood_Test__c/fields/Sodium_Min__c.field-meta.xml
<CustomField>
    <fullName>Sodium_Min__c</fullName>
    <defaultValue>TEXT(135)</defaultValue>
    <label>Sodium Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>