unpackaged/main/default/objects/Blood_Test__c/fields/Sodium_Units__c.field-meta.xml
<CustomField>
    <fullName>Sodium_Units__c</fullName>
    <defaultValue>&quot;mmol/L&quot;</defaultValue>
    <label>Sodium Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>