unpackaged/main/default/objects/Blood_Test__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Blood Test</description>
    <inlineHelpText>Status of the Blood Test</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
                <default>true</default>
                <label>Ordered</label>
            </value>
            <value>
                <fullName>Successful Test</fullName>
            </value>
            <value>
                <fullName>Partial Success/Some Failed Values</fullName>
            </value>
            <value>
                <fullName>Successful Test - Doctor Requested Repeat</fullName>
            </value>
            <value>
                <fullName>Failed Test</fullName>
            </value>
            <value>
                <fullName>Lost in post</fullName>
            </value>
            <value>
                <fullName>Cancelled Order</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Received by lab</fullName>
            </value>
            <value>
                <fullName>Error - Replacement Kit Missing Patient Data</fullName>
            </value>
            <value>
                <fullName>Re-submit to RDi</fullName>
            </value>
            <value>
                <fullName>Re-submit to Inuvi</fullName>
            </value>
            <value>
                <fullName>Re-submitted to RDi</fullName>
            </value>
            <value>
                <fullName>Re-submitted to Inuvi</fullName>
            </value>
            <value>
                <fullName>Order sent to RDi</fullName>
            </value>
            <value>
                <fullName>Order sent to Real Digital</fullName>
            </value>
            <value>
                <fullName>Order sent to Inuvi</fullName>
            </value>
            <value>
                <fullName>Order sent to Randox</fullName>
            </value>
            <value>
                <fullName>Re-submit to Meddx</fullName>
            </value>
            <value>
                <fullName>Re-submitted to Meddx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>