unpackaged/main/default/objects/Blood_Test__c/fields/Test_Result_Data__c.field-meta.xml
<CustomField>
    <fullName>Test_Result_Data__c</fullName>
    <label>Test Result Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>