unpackaged/main/default/objects/Blood_Test__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient Submitted Results</fullName>
            </value>
            <value>
                <fullName>OPT013-FP</fullName>
            </value>
            <value>
                <fullName>OPT013-V</fullName>
            </value>
            <value>
                <fullName>OPT002-FP</fullName>
            </value>
            <value>
                <fullName>OPT002-V</fullName>
            </value>
            <value>
                <fullName>OPT003-FP</fullName>
            </value>
            <value>
                <fullName>OPT003-V</fullName>
            </value>
            <value>
                <fullName>OPT004-FP</fullName>
            </value>
            <value>
                <fullName>OPT004-V</fullName>
            </value>
            <value>
                <fullName>HSC1-V</fullName>
                <label>HSC1-V (FBC)</label>
            </value>
            <value>
                <fullName>OPT907-FP</fullName>
            </value>
            <value>
                <fullName>OPT907-V</fullName>
            </value>
            <value>
                <fullName>OPT908-FP</fullName>
            </value>
            <value>
                <fullName>OPT908-V</fullName>
            </value>
            <value>
                <fullName>OPT909-FP</fullName>
            </value>
            <value>
                <fullName>OPT909-V</fullName>
            </value>
            <value>
                <fullName>OPT910-FP</fullName>
            </value>
            <value>
                <fullName>OPT910-V</fullName>
            </value>
            <value>
                <fullName>OPT911-FP</fullName>
            </value>
            <value>
                <fullName>OPT911-V</fullName>
            </value>
            <value>
                <fullName>OPT912-FP</fullName>
            </value>
            <value>
                <fullName>OPT912-V</fullName>
            </value>
            <value>
                <fullName>OPT913-FP</fullName>
            </value>
            <value>
                <fullName>OPT913-V</fullName>
            </value>
            <value>
                <fullName>OPT914-FP</fullName>
            </value>
            <value>
                <fullName>OPT914-V</fullName>
            </value>
            <value>
                <fullName>OPT915-FP</fullName>
            </value>
            <value>
                <fullName>OPT915-V</fullName>
            </value>
            <value>
                <fullName>OPT916-FP</fullName>
            </value>
            <value>
                <fullName>OPT916-V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>