unpackaged/main/default/objects/Blood_Test__c/fields/Testing_Laboratory__c.field-meta.xml
<CustomField>
    <fullName>Testing_Laboratory__c</fullName>
    <formula>IF( CONTAINS(text (Test_Type__c), &quot;OPT1&quot;) , &quot;PuraDx&quot;, &quot;County Pathology&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Testing Laboratory</label>
    <type>Text</type>
</CustomField>