unpackaged/main/default/objects/Blood_Test__c/fields/Testosterone__c.field-meta.xml
<CustomField>
    <fullName>Testosterone__c</fullName>
    <label>Testosterone</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>