unpackaged/main/default/objects/Blood_Test__c/fields/Testosterone_Max__c.field-meta.xml
<CustomField>
    <fullName>Testosterone_Max__c</fullName>
    <defaultValue>TEXT(30.0)</defaultValue>
    <label>Testosterone Max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>