unpackaged/main/default/objects/Blood_Test__c/fields/Testosterone_Min__c.field-meta.xml
<CustomField>
    <fullName>Testosterone_Min__c</fullName>
    <defaultValue>TEXT(12.0)</defaultValue>
    <label>Testosterone Min</label>
    <length>255</length>
    <type>Text</type>
</CustomField>