unpackaged/main/default/objects/Blood_Test__c/fields/TIBC__c.field-meta.xml
<CustomField>
    <fullName>TIBC__c</fullName>
    <label>TIBC</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>