unpackaged/main/default/objects/Blood_Test__c/fields/Total_Bilirubin__c.field-meta.xml
<CustomField>
    <fullName>Total_Bilirubin__c</fullName>
    <label>Total Bilirubin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>