unpackaged/main/default/objects/Blood_Test__c/fields/Total_Bilirubin_Max__c.field-meta.xml
<CustomField>
    <fullName>Total_Bilirubin_Max__c</fullName>
    <defaultValue>TEXT(24)</defaultValue>
    <label>Total Bilirubin Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>