unpackaged/main/default/objects/Blood_Test__c/fields/Total_Bilirubin_Min__c.field-meta.xml
<CustomField>
    <fullName>Total_Bilirubin_Min__c</fullName>
    <defaultValue>TEXT(0)</defaultValue>
    <label>Total Bilirubin Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>