unpackaged/main/default/objects/Blood_Test__c/fields/Total_Bilirubin_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Bilirubin_Units__c</fullName>
    <defaultValue>&quot;umol/L&quot;</defaultValue>
    <label>Total Bilirubin Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>