unpackaged/main/default/objects/Blood_Test__c/fields/Total_Protein_Max__c.field-meta.xml
<CustomField>
    <fullName>Total_Protein_Max__c</fullName>
    <defaultValue>TEXT(80)</defaultValue>
    <label>Total Protein Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>