unpackaged/main/default/objects/Blood_Test__c/fields/Total_Protein_Min__c.field-meta.xml
<CustomField>
    <fullName>Total_Protein_Min__c</fullName>
    <defaultValue>TEXT(60)</defaultValue>
    <label>Total Protein Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>