unpackaged/main/default/objects/Blood_Test__c/fields/Total_Protein_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Protein_Units__c</fullName>
    <defaultValue>&quot;g/L&quot;</defaultValue>
    <label>Total Protein Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>