unpackaged/main/default/objects/Blood_Test__c/fields/Transferrin_Saturation__c.field-meta.xml
<CustomField>
    <fullName>Transferrin_Saturation__c</fullName>
    <label>Transferrin Saturation</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>