unpackaged/main/default/objects/Blood_Test__c/fields/Triglycerides__c.field-meta.xml
<CustomField>
    <fullName>Triglycerides__c</fullName>
    <label>Triglycerides</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>