unpackaged/main/default/objects/Blood_Test__c/fields/Triglycerides_Max__c.field-meta.xml
<CustomField>
    <fullName>Triglycerides_Max__c</fullName>
    <defaultValue>TEXT(1.7)</defaultValue>
    <label>Triglycerides Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>