unpackaged/main/default/objects/Blood_Test__c/fields/Triglycerides_Min__c.field-meta.xml
<CustomField>
    <fullName>Triglycerides_Min__c</fullName>
    <defaultValue>TEXT(0.0)</defaultValue>
    <label>Triglycerides Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>