unpackaged/main/default/objects/Blood_Test__c/fields/TSH__c.field-meta.xml
<CustomField>
    <fullName>TSH__c</fullName>
    <label>TSH</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>