unpackaged/main/default/objects/Blood_Test__c/fields/TSH_Max__c.field-meta.xml
<CustomField>
    <fullName>TSH_Max__c</fullName>
    <defaultValue>TEXT(4.20)</defaultValue>
    <label>TSH Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>