unpackaged/main/default/objects/Blood_Test__c/fields/TSH_Min__c.field-meta.xml
<CustomField>
    <fullName>TSH_Min__c</fullName>
    <defaultValue>TEXT(0.27)</defaultValue>
    <label>TSH Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>