unpackaged/main/default/objects/Blood_Test__c/fields/TSH_Units__c.field-meta.xml
<CustomField>
    <fullName>TSH_Units__c</fullName>
    <defaultValue>&quot;mU/L&quot;</defaultValue>
    <label>TSH Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>