unpackaged/main/default/objects/Blood_Test__c/fields/UIBC__c.field-meta.xml
<CustomField>
    <fullName>UIBC__c</fullName>
    <label>UIBC</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>