unpackaged/main/default/objects/Blood_Test__c/fields/Urea__c.field-meta.xml
<CustomField>
    <fullName>Urea__c</fullName>
    <label>Urea</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>