unpackaged/main/default/objects/Blood_Test__c/fields/Urea_Max__c.field-meta.xml
<CustomField>
    <fullName>Urea_Max__c</fullName>
    <defaultValue>TEXT(7.8)</defaultValue>
    <label>Urea Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>