unpackaged/main/default/objects/Blood_Test__c/fields/Urea_Min__c.field-meta.xml
<CustomField>
    <fullName>Urea_Min__c</fullName>
    <defaultValue>TEXT(2.5)</defaultValue>
    <label>Urea Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>