unpackaged/main/default/objects/Blood_Test__c/fields/Vitamin_B12__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_B12__c</fullName>
    <label>Vitamin B12</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>