unpackaged/main/default/objects/Blood_Test__c/fields/Vitamin_D__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_D__c</fullName>
    <label>Vitamin D</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>