unpackaged/main/default/objects/Blood_Test__c/fields/Website_Order__c.field-meta.xml
<CustomField>
    <fullName>Website_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Blood Test order from website</description>
    <inlineHelpText>Blood Test order from website</inlineHelpText>
    <label>Website Order</label>
    <type>Checkbox</type>
</CustomField>