unpackaged/main/default/objects/Blood_Test__c/fields/Website_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Website_Order_ID__c</fullName>
    <label>Website Order ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>