unpackaged/main/default/objects/Blood_Test__c/fields/White_Blood_Cells__c.field-meta.xml
<CustomField>
    <fullName>White_Blood_Cells__c</fullName>
    <label>White Blood Cells</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>