unpackaged/main/default/objects/Blood_Test__c/fields/White_Blood_Cells_Max__c.field-meta.xml
<CustomField>
    <fullName>White_Blood_Cells_Max__c</fullName>
    <defaultValue>TEXT(10.00)</defaultValue>
    <label>White Blood Cells Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>