unpackaged/main/default/objects/Blood_Test__c/fields/White_Blood_Cells_Min__c.field-meta.xml
<CustomField>
    <fullName>White_Blood_Cells_Min__c</fullName>
    <defaultValue>TEXT(3.00)</defaultValue>
    <label>White Blood Cells Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>