unpackaged/main/default/objects/Blood_Test__c/fields/White_Blood_Cells_Units__c.field-meta.xml
<CustomField>
    <fullName>White_Blood_Cells_Units__c</fullName>
    <defaultValue>&quot;x10^9/L&quot;</defaultValue>
    <label>White Blood Cells Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>