unpackaged/main/default/objects/Blood_Test__c/validationRules/Bespoke_Kit_Test_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Bespoke_Kit_Test_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Test_Type__c , &#39;Bespoke&#39;),
ISBLANK( Bespoke_Test_Type__c ))</errorConditionFormula>
    <errorDisplayField>Bespoke_Test_Type__c</errorDisplayField>
    <errorMessage>Please enter a Bespoke Test Type</errorMessage>
</ValidationRule>