unpackaged/main/default/objects/Blood_Test__c/validationRules/Bespoke_Meddx_Kit_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Bespoke_Meddx_Kit_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Test_Type__c , &#39;Bespoke&#39;),
ISPICKVAL( Bespoke_Meddx_Kit_Type__c , &#39;&#39;))</errorConditionFormula>
    <errorDisplayField>Bespoke_Meddx_Kit_Type__c</errorDisplayField>
    <errorMessage>Please choose a Bespoke Meddx Kit Type</errorMessage>
</ValidationRule>