unpackaged/main/default/objects/Blood_Test__c/validationRules/Check_DOB_Exists.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_DOB_Exists</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Contact__r.Date_of_Birth__c),
    $Profile.Name &lt;&gt;&#39;System Administrator&#39;,
$Profile.Name &lt;&gt;&#39;Integration Admin&#39;)</errorConditionFormula>
    <errorMessage>Please update the patient&#39;s date of birth before creating a new blood test</errorMessage>
</ValidationRule>