unpackaged/main/default/objects/Blood_Test__c/validationRules/Collection_method_must_be_added.validationRule-meta.xml
<ValidationRule>
    <fullName>Collection_method_must_be_added</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Collection_Method__c , &#39;&#39;),
$Profile.Name &lt;&gt;&#39;System Administrator&#39;,
$Profile.Name &lt;&gt;&#39;Integration Admin&#39;)</errorConditionFormula>
    <errorDisplayField>Collection_Method__c</errorDisplayField>
    <errorMessage>Please enter a collection method</errorMessage>
</ValidationRule>