unpackaged/main/default/objects/Blood_Test__c/validationRules/Patient_Submitted_Results_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Patient_Submitted_Results_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Test_Type__c , &#39;Patient Submitted Results&#39;),
ISPICKVAL( Status__c , &#39;Ordered&#39;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status must be Successful or Partial Success if Patient Submitted Results are uploaded</errorMessage>
</ValidationRule>