unpackaged/main/default/objects/Blood_Test__c/validationRules/Replacement_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Replacement_Reason</fullName>
    <active>true</active>
    <description>Enter a replacement reason when replacement kiit is ticked</description>
    <errorConditionFormula>AND(
Replacement_Kit__c = True,
ISPICKVAL( Replacement_Reason__c, &quot;&quot; ),
NOT($Permission.BypassValidationRules))</errorConditionFormula>
    <errorDisplayField>Replacement_Reason__c</errorDisplayField>
    <errorMessage>Please select a Replacement Reason for the Replacement Kit</errorMessage>
</ValidationRule>