unpackaged/main/default/objects/Blood_Test__c/listViews/Bespoke_Tests.listView-meta.xml
<ListView>
    <fullName>Bespoke_Tests</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Test_Type__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Replacement_Kit__c</columns>
    <columns>Internal_Dispatch_Order__c</columns>
    <columns>Manual_New_Order__c</columns>
    <columns>Website_Order__c</columns>
    <columns>Patient_Submitted_Results__c</columns>
    <columns>Sample_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Type__c</field>
        <operation>equals</operation>
        <value>Bespoke</value>
    </filters>
    <label>Bespoke Tests</label>
</ListView>