unpackaged/main/default/objects/Blood_Test__c/listViews/Blood_Tests_sent_to_Randox.listView-meta.xml
<ListView>
    <fullName>Blood_Tests_sent_to_Randox</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Test_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Results_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Replacement_Kit__c</columns>
    <columns>Internal_Dispatch_Order__c</columns>
    <columns>Manual_New_Order__c</columns>
    <columns>Website_Order__c</columns>
    <columns>Patient_Submitted_Results__c</columns>
    <columns>Sample_Date__c</columns>
    <columns>PDF_Results_Upload_Date_Time__c</columns>
    <columns>Re_send_HL7_file_to_Randox__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Re_send_HL7_file_to_Randox__c</field>
        <operation>equals</operation>
        <value>Re-send HL7 file to Randox,HL7 file re-sent to Randox,HL7 file sent to Randox</value>
    </filters>
    <label>Blood Tests sent to Randox</label>
</ListView>