unpackaged/main/default/objects/Blood_Test__c/listViews/Bloods_with_HL7_but_no_PDF.listView-meta.xml
<ListView>
    <fullName>Bloods_with_HL7_but_no_PDF</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Test_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Sample_Date__c</columns>
    <columns>PDF_Results_Upload_Date_Time__c</columns>
    <columns>Results_Status__c</columns>
    <columns>HL7_Results_Uploaded__c</columns>
    <columns>Low_Testosterone_Flag__c</columns>
    <columns>Patient_Status__c</columns>
    <columns>Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Results_Status__c</field>
        <operation>notEqual</operation>
        <value>Sent to patient,Discuss at consultation,Sent to patient (automated)</value>
    </filters>
    <filters>
        <field>Patient_Submitted_Results__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Successful Test,Partial Success/Some Failed Values,Failed Test,Dispatched,Received by lab,Re-submit to Meddx,Re-submit to Inuvi,Re-submitted to Meddx,Re-submitted to Inuvi,Order sent to Real Digital,Order sent to Inuvi,Order sent to Randox</value>
    </filters>
    <filters>
        <field>PDF_Results_Upload_Date_Time__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>HL7_Results_Uploaded__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Bloods with HL7 but no PDF</label>
</ListView>