unpackaged/main/default/objects/Blood_Test__c/listViews/Failed_Tests.listView-meta.xml
<ListView>
    <fullName>Failed_Tests</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Test_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Results_Status__c</columns>
    <columns>PDF_Results_Upload_Date_Time__c</columns>
    <columns>Replacement_Kit__c</columns>
    <columns>Internal_Dispatch_Order__c</columns>
    <columns>Manual_New_Order__c</columns>
    <columns>Website_Order__c</columns>
    <columns>Sample_Date__c</columns>
    <columns>Analysis_Lab__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed Test</value>
    </filters>
    <label>Failed Tests</label>
</ListView>